SCR #409279 - fix: change spacing between blocks

--- a/src/engine-scss/layouts/home/banner-section/themes/_default.scss
+++ b/src/engine-scss/layouts/home/banner-section/themes/_default.scss
@@ -1,7 +1,8 @@
 .wlc-sections__banner-section {
     @include bm.get-mq-map('margin', $themeBannerSection, 'bannerSectionMargin');
 
-    + .wlc-sections__categories {
-        margin-top: ef.get-value($themeBannerSection, 'sectionMarginTop');
+    + .wlc-sections__categories,
+    + .wlc-sections__banner-promotion {
+        margin: ef.get-value($themeBannerSection, 'sectionMargin');
     }
 }
